RDS-Postgres/security_group.tf
resource "aws_security_group" "mydb2" {
  name = "mydb2"
  vpc_id = "vpc-00cc4a2a6875a2349"
 # vpc_id      = "${data.aws_vpc.default.id}"

  ingress {
   from_port   = 22
   to_port     = 22
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
  }

  # Only postgres in
  ingress {
    from_port = 5432
    to_port = 5432
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic.
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
